# controllers/error.go
@@ -1,10 +1,6 @@
 package controllers
 
-type Error struct {
-	StatusCode uint
-	Message    string
-}
-
-func (e Error) Error() string {
-	return e.Message
+// ErrorMessage generic
+type ErrorMessage struct {
+	Message string `json:"message"`
 }
